<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="app_name">Two Truths and a Lie</string>
    <string name="title_activity_main">Two Truths and a Lie</string>
    <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="easy_mode_explanation">You\'re playing in easy mode, so you got the score you requested! Wasn\'t that easy?</string>
    <string name="hard_mode_explanation">You\'re playing in hard mode, so you only got half the score you requested! Isn\'t this game hard?</string>
    <string name="achievement_prime_toast_text">Prime score!</string>
    <string name="achievement_arrogant_toast_text">Arrogant (requested maximum score)!</string>
    <string name="achievement_humble_toast_text">Humble! (requested 0 score)</string>
    <string name="achievement_leet_toast_text">L33t! (got 1337 score)</string>
    <string name="achievement">Achievement</string>
    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="what_score_do_you_deserve">What score do you think you deserve?</string>
    <string name="initial_input">0000</string>
    <string name="digit0"> 0 </string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="choose_difficulty">Choose a difficulty to play:</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="see_your_progress">See your progress:</string>
    <string name="show_achievements">Achievements</string>
    <string name="show_leaderboards">Leaderboards</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="you_win">You win! Your score is:</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="submit_button">Submit</string>
    <string name="next_button">Next Question</string>
    <string name="hint_button">Hint</string>
    <string name="gameplay_header">Which statement is a lie?</string>
    <string name="nbsp">\u00A0</string>
    <string name="start_game_button">Start Game</string>
    <string name="congratulations">That one was false!  Good job!</string>
    <string name="oops">Sorry!  That one was true!</string>
</resources>
