<?xml version="1.0" encoding="utf-8"?>

<!-- GAMEPLAY SCREEN -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/screen_gameplay"
	android:gravity="center|top"
	android:padding="20dp"
	>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:id="@+id/gameplay_scroll"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top"
            >
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/gameplay_header"
			    android:text="@string/gameplay_header"
			    android:clickable="true"
			    android:padding="10dp"
			    style="@android:style/TextAppearance.Medium"
			    android:gravity="center"
			    />
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/statement_1_textview"
			    android:clickable="true"
			    android:layout_marginBottom="10dp"
			    android:padding="10dp"
			    style="@android:style/TextAppearance.Medium"
			    />
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/statement_2_textview"
			    android:clickable="true"
			    android:layout_marginBottom="10dp"
			    android:padding="10dp"
			    style="@android:style/TextAppearance.Medium"
			    />
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/statement_3_textview"
			    android:clickable="true"
			    android:layout_marginBottom="10dp"
			    android:padding="10dp"
			    style="@android:style/TextAppearance.Medium"
			    />
			
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
		     	style="?android:attr/buttonBarStyle"
		     	android:layout_marginBottom="10dp"
			    >
				<Button
				     android:layout_width="0dp"
				     android:layout_weight="0.5"
				     android:layout_height="wrap_content"
				     android:id="@+id/hint_button"
				     android:text="@string/hint_button"
				     style="?android:attr/buttonBarButtonStyle"
				     android:background="@color/paleGreen"
				     />
				 <Button
				     android:layout_width="0dp"
				     android:layout_weight="0.5"
				     android:layout_height="wrap_content"
				     android:id="@+id/submit_button"
				     android:text="@string/submit_button"
				     style="?android:attr/buttonBarButtonStyle"
				     android:background="@color/paleGreen"
				     />
			 </LinearLayout>
		 </LinearLayout>
	 </ScrollView>
	 <com.google.android.gms.ads.AdView 
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-3217048277983592/4820780261"
        ads:adSize="BANNER"
        />
</LinearLayout>

